			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01x: *********************************


************************* Version 8.01w: *********************************

IMP: (9/23/04, SMR) PostScript output improved.

IMP/MAN: (9/22/04, SMR) Waveform window has button to show vertex points.

IMP/MAN: (9/22/04, SMR) Added "bipolar" and "pcb" technologies.

IMP/MAN: (9/22/04, SMR) Added ability to show sweeps and intervals to waveform window.

IMP/MAN: (9/21/04, SMR) Added "Make Schematic" to convert layout to schematics.

IMP: (9/22/04, GVG) Refactoring NodeInst/ArcInst makeInstance/newInstance methods.
     From now on, short/long definitions are available

IMP: (9/22/04, GVG) CrossLib dialog and scrollbars. Added syncronizer to keep 3 scrollbars aligned.

IMP (9/21/04, RK) Performance tuning flat NCC algorithm. I replaced StratFrontier with LeafEquivRecord which is much more efficient. Flat NCC of top cell of qFourP2 without size checking has dropped from 16 minutes to 2.8 minutes. With size checking has dropped from 22 minutes to 8 minutes.

************************* Version 8.01v: *********************************

FIX (9/21/04, JKG+GVG) Fix for checking export type on ERC well network.
     Don't check if well networks are not connected together; NCC will check that

IMP/MAN: (9/21/04, SMR) Added "Down Hierarchy In Place".

BUG: (9/21/04, SMR) Verilog netlister doesn't handle doubly-indexed busses where the first index is non-numeric.
FIX: In Topology.doGetNetworks() must find any numeric index to determine ascending/descending order.

IMP: (9/20/04, SMR) HSpice output reader now handles noise signals properly.

IMP: (9/20/04, SMR) Made messages window use fixed-width font.

************************* Version 8.01u: *********************************

BUG: (9/20/04, GVG) DRC and minimum area checking: no merging correctly poly and transistor-poly areas